==> milindur/MdkController/MdkController/src/BLE/hal_aci_tl.c <==
#include <stdio.h>
#include "FreeRTOS.h"
#include "task.h"
#include "semphr.h"
#include "asf.h"
#include "trcUser.h"
#include "trcConfig.h"
#include "trcHardwarePort.h"
#include <SPI.h>
#include "hal_platform.h"
#include "hal_aci_tl.h"
#include "SEGGER_RTT.h"
#include "aci_queue.h"
#include <avr/sleep.h>
    #define REVERSE_BITS(byte) (((reverse_lookup[(byte & 0x0F)]) << 4) + reverse_lookup[((byte & 0xF0) >> 4)])
    #define REVERSE_BITS(byte) (((reverse_lookup[(byte & 0x0F)]) << 4) + reverse_lookup[((byte & 0xF0) >> 4)])
	#define SPI_CHIP_SEL 0
	#define SPI_CHIP_PCS spi_get_pcs(SPI_CHIP_SEL)
	#define SPI_CLK_POLARITY 0
	#define SPI_CLK_PHASE 1

static void m_aci_event_check(void)
{
  hal_aci_data_t data_to_send;
  hal_aci_data_t received_data;

  // No room to store incoming messages
  if (aci_queue_is_full(&aci_rx_q))
  {
    return;
  }

  // If the ready line is disabled and we have pending messages outgoing we enable the request line
  if (HIGH == ioport_get_pin_level(a_pins_local_ptr->rdyn_pin))
  {
    if (!aci_queue_is_empty(&aci_tx_q))
    {
      m_aci_reqn_enable();
    }

    return;
  }

  // Receive from queue
  if (!aci_queue_dequeue(&aci_tx_q, &data_to_send))
  {
    /* queue was empty, nothing to send */
    data_to_send.status_byte = 0;
    data_to_send.buffer[0] = 0;
  }

  // Receive and/or transmit data
  m_aci_spi_transfer(&data_to_send, &received_data);

  /* If there are messages to transmit, and we can store the reply, we request a new transfer */
  if (!aci_queue_is_full(&aci_rx_q) && !aci_queue_is_empty(&aci_tx_q))
  {
    m_aci_reqn_enable();
  }

  // Check if we received data
  if (received_data.buffer[0] > 0)
  {
    if (!aci_queue_enqueue(&aci_rx_q, &received_data))
    {
      /* Receive Buffer full.
         Should never happen.
         Spin in a while loop.
      */
      while(1);
    }
  }

  return;
}

static inline void m_aci_reqn_disable (void)
{
  ioport_set_pin_level(a_pins_local_ptr->reqn_pin, 1);
}

static inline void m_aci_reqn_enable (void)
{
  ioport_set_pin_level(a_pins_local_ptr->reqn_pin, 0);
}

void hal_aci_tl_pin_reset(void)
{
    if (PIN_UNUSED != a_pins_local_ptr->reset_pin)
    {
		ioport_set_pin_dir(a_pins_local_ptr->reset_pin, IOPORT_DIR_OUTPUT);

        if ((REDBEARLAB_SHIELD_V1_1     == a_pins_local_ptr->board_name) ||
            (REDBEARLAB_SHIELD_V2012_07 == a_pins_local_ptr->board_name))
        {
            //The reset for the Redbearlab v1.1 and v2012.07 boards are inverted and has a Power On Reset
            //circuit that takes about 100ms to trigger the reset
            ioport_set_pin_level(a_pins_local_ptr->reset_pin, 1);
            delay(100);
            ioport_set_pin_level(a_pins_local_ptr->reset_pin, 0);
        }
        else
        {
            ioport_set_pin_level(a_pins_local_ptr->reset_pin, 1);
            ioport_set_pin_level(a_pins_local_ptr->reset_pin, 0);
            ioport_set_pin_level(a_pins_local_ptr->reset_pin, 1);
        }
    }
}

bool hal_aci_tl_event_get(hal_aci_data_t *p_aci_data)
{
  bool was_full;

  if (!a_pins_local_ptr->interface_is_interrupt && !aci_queue_is_full(&aci_rx_q))
  {
    m_aci_event_check();
  }

  was_full = aci_queue_is_full(&aci_rx_q);

  if (aci_queue_dequeue(&aci_rx_q, p_aci_data))
  {
    if (aci_debug_print)
    {
	  taskENTER_CRITICAL();
      SEGGER_RTT_printf(0, "E");
      m_aci_data_print(p_aci_data);
	  taskEXIT_CRITICAL();
    }

    if (was_full && a_pins_local_ptr->interface_is_interrupt)
	  {
      /* Enable RDY line interrupt again */
      //attachInterrupt(a_pins_local_ptr->interrupt_number, m_aci_isr, LOW);
	  //pio_handler_set_pin(PIO_PC22_IDX, PIO_IT_LOW_LEVEL, m_aci_isr_hal);
	  pio_enable_pin_interrupt(a_pins_local_ptr->rdyn_pin);
    }

    /* Attempt to pull REQN LOW since we've made room for new messages */
    if (!aci_queue_is_full(&aci_rx_q) && !aci_queue_is_empty(&aci_tx_q))
    {
      m_aci_reqn_enable();
    }

    return true;
  }

  return false;
}

static uint8_t spi_readwrite(const uint8_t aci_byte)
{
	//Board dependent defines
#if defined (__AVR__)
    //For Arduino the transmission does not have to be reversed
    return SPI.transfer(aci_byte);
#elif defined (__SAM3X8E__)
	//For ARM the transmission has to be reversed
	spi_write(SPI0, REVERSE_BITS(aci_byte), 0, 0);
	while ((spi_read_status(SPI0) & SPI_SR_RDRF) == 0);
	uint16_t data;
	uint8_t pcs;
	spi_read(SPI0, &data, &pcs);
	return REVERSE_BITS((uint8_t)data);
#elif defined(__PIC32MX__)
    //For ChipKit the transmission has to be reversed
    uint8_t tmp_bits;
    tmp_bits = SPI.transfer(REVERSE_BITS(aci_byte));
	return REVERSE_BITS(tmp_bits);
#endif
}
